# cookiecutter_template

./: cookiecutter.json
{{ cookiecutter.directory_name }}/: .gitignore  pyproject.toml
{{ cookiecutter.directory_name }}/scripts/: hello.py
