[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "Add your description here"
readme = "README.md"
license = "{{ cookiecutter.license }}"
requires-python = "{{ cookiecutter.python_version }}"
authors = ["{{ cookiecutter.author_name  }} <{{ cookiecutter.author_email }}>"]
maintainers = ["{{ cookiecutter.author_name  }} <{{ cookiecutter.author_email }}>"]

packages = [
    { include = "{{ cookiecutter.directory_name }}", from = "src" },
]
include = [
    "README.md",
]

dependencies = [
]

[project.urls]
Repository = "{{ cookiecutter.repo_url }}"
